kubernetes/deployments/demo_apps/2048-game.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-apps
  name: game-2048
  labels:
    app: game-2048
spec:
  selector:
    matchLabels:
      app: game-2048
  replicas: 1
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - name: game-2048
          image: alexwhen/docker-2048

---
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  namespace: demo-apps
  labels:
    app: game-2048
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: game-2048

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048
  namespace: demo-apps
  labels:
    app: game-2048
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /game-2048
            pathType: Prefix
            backend:
              service:
                name: game-2048
                port:
                  number: 80
