kubernetes/deployments/demo_apps/nginx-hello.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-apps
  name: nginx-hello
  labels:
    app: nginx-hello
spec:
  selector:
    matchLabels:
      app: nginx-hello
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx-hello
          image: nginxdemos/hello
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: demo-apps
  labels:
    app: nginx-hello
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: nginx-hello

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello
  namespace: demo-apps
  labels:
    app: nginx-hello
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /nginx-hello
            pathType: Prefix
            backend:
              service:
                name: nginx-hello
                port:
                  number: 80
